# rdf-store-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cog.toml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: docs.yml
rdf_store_rs/: all.html  enum.DataType.html  enum.RDFStoreError.html  enum.Term.html  fn.ptr_to_cstr.html  index.html  sidebar-items.js  struct.Class.html  struct.Graph.html  struct.Literal.html  struct.LiteralIdUrlDisplay.html  struct.LiteralUrlDisplay.html  struct.Namespace.html  struct.Predicate.html  union.LiteralValue.html
rdf_store_rs/c_utils/: fn.ptr_to_cstr.html  index.html  sidebar-items.js
rdf_store_rs/class/: index.html  struct.Class.html
rdf_store_rs/data_type/: enum.DataType.html  index.html  sidebar-items.js  static.DATA_TYPE_MAP.html
rdf_store_rs/error/: enum.RDFStoreError.html  index.html  sidebar-items.js
rdf_store_rs/graph/: index.html  sidebar-items.js  struct.Graph.html  struct.GraphDisplayIRI.html
rdf_store_rs/literal/: index.html  sidebar-items.js
rdf_store_rs/literal/id_url_display/: index.html  sidebar-items.js  struct.LiteralIdUrlDisplay.html
rdf_store_rs/literal/this/: index.html  sidebar-items.js  struct.Literal.html
rdf_store_rs/literal/url_display/: index.html  sidebar-items.js  struct.LiteralUrlDisplay.html
rdf_store_rs/literal/value/: index.html  sidebar-items.js  union.LiteralValue.html
rdf_store_rs/namespace/: index.html  struct.Namespace.html
rdf_store_rs/predicate/: index.html  struct.Predicate.html
rdf_store_rs/term/: enum.Term.html  index.html
src/: c_utils.rs  class.rs  const.rs  consts.rs  data_type.rs  error.rs  graph.rs  lexical_value.rs  lib.rs  namespace.rs  predicate.rs  prefix.rs  resource_value.rs  term.rs
src/literal/: id_url_display.rs  mod.rs  tests.rs  this.rs  url_display.rs  value.rs
src/rdf_store_rs/: c_utils.rs.html  class.rs.html  consts.rs.html  data_type.rs.html  error.rs.html  graph.rs.html  lib.rs.html  namespace.rs.html  predicate.rs.html  term.rs.html
src/rdf_store_rs/literal/: id_url_display.rs.html  mod.rs.html  this.rs.html  url_display.rs.html  value.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/num_enum/: trait.TryFromPrimitive.js
